<resources>
    <string name="app_name">CigC</string>
    <string name="maximum_number_of_sticks_per_day">Maximum number of sticks per day</string>
    <string name="choose_a_number">Choose a number</string>
    <string name="four_words">Right on, Champ!</string>
    <string name="_20">20</string>
    <string name="eight_words">Alright! getting there..</string>
    <string name="twelve_words">Don\'t Stress! you got this!</string>
    <string name="sixteen_words">Baby steps, I believe in you!</string>
    <string name="twenty_words">Well.. it\'s a start!</string>
    <string name="continues">Continue</string>
    <string name="smooth">Smooth..</string>
    <string name="refresh">Refresh</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="doing_will_delete">Doing this will delete your current progress and settings.</string>
    <string name="yes_i_am_sure">Yes, I am sure!</string>
    <string name="no_take_me_back">No, take me back!</string>
    <string name="please_dont">Please don\'t...</string>
    <string name="doing_this_will_lead_you_to_a_downward_spiral_of_despair_and_regret">Doing this will lead you to a downward spiral of despair and.. regret.</string>
    <string name="i_don_t_care">I don\'t care!</string>
    <string name="i_gess_you_re_right">I guess you\'re right..</string>
</resources>