<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/top_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_standard_2x"
        android:fontFamily="@font/lato"
        android:text="@string/maximum_number_of_sticks_per_day"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.royrodriguez.transitionbutton.TransitionButton
        android:id="@+id/btn_ok"
        android:layout_width="@dimen/btn_long_length"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_standard_5x"
        android:padding="@dimen/dimen_standard_2x"
        android:text="@string/choose_a_number"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        app:defaultColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:loaderColor="@color/colorPrimary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_standard_2x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_text" />

    <TextView
        android:id="@+id/txt_choice_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/four_words"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/text_size_30sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/btn_ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_number" />

</androidx.constraintlayout.widget.ConstraintLayout>